laFeat: Custom Connectors (standard) (#1671)
* Search service now requests custom connectors for standard as well as consumption

* Implemented custom connectors

* Fixed some issues with connections for custom connectors

* PR Cleanup

* Moved custom op-manifest code to standard service

* Removed unnecessary visibility fix

* Priti comment fixes

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -512,6 +512,7 @@
   "SY04wn": "Required. The name of the action with a form-data or form-encoded response.",
   "Sh10cw": "Save",
   "SmCQys": "Custom Tracking Id",
+  "Sr8PcK": "No operations found",
   "SvQyvs": "Done",
   "SyFXM3": "Read less",
   "Sz8KN3": "Test",
@@ -1148,6 +1149,7 @@
   "_SY04wn.comment": "Required string parameter to identify action name for formDataMultiValues function",
   "_Sh10cw.comment": "Button text for save the changes",
   "_SmCQys.comment": "title for client tracking id setting",
+  "_Sr8PcK.comment": "Message to show when no operations are found",
   "_SvQyvs.comment": "confirmation text",
   "_SyFXM3.comment": "Text for read less button",
   "_Sz8KN3.comment": "Test",
@@ -1497,6 +1499,7 @@
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
   "_nOWGAV.comment": "End time text",
+  "_nRpM02.comment": "Custom category name text",
   "_nSan4V.comment": "Reset",
   "_nTA155.comment": "Required string parameter to identify which property to remove",
   "_nZ4nLn.comment": "title for suppress workflow headers setting",
@@ -1940,6 +1943,7 @@
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
   "nOWGAV": "End time",
+  "nRpM02": "Custom",
   "nSan4V": "Reset",
   "nTA155": "Required. The name of the property to remove.",
   "nZ4nLn": "Suppress workflow headers",
