[Data Mapper] Individual function icons (#1680)
Individual function icons

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1281,6 +1281,7 @@
   "_aJxefp.comment": "Text for add new parameter button",
   "_aK4iLW.comment": "title for data handling setting section",
   "_aSnCCB.comment": "Header for resource lcoation",
+  "_aXyyDL.comment": "Body text for an unconnected required schema card",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1323,6 +1324,7 @@
   "_cscezV.comment": "Required collection parameter to apply skip function on",
   "_d3bSQA.comment": "Text to tell users to click to delete comments",
   "_d4xMIx.comment": "Timezone value ",
+  "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dDYCuU.comment": "Link text to open URL",
   "_dOpdsP.comment": "Update Expression",
   "_dSTRb/.comment": "description of content transfer setting",
@@ -1725,6 +1727,7 @@
   "aJxefp": "Add new parameters",
   "aK4iLW": "Data Handling",
   "aSnCCB": "Location",
+  "aXyyDL": "{nodeName} has an non-terminating connection chain",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1767,6 +1770,7 @@
   "cscezV": "Required. The collection to skip the first Count objects from.",
   "d3bSQA": "Delete comment",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
+  "dBWIjR": "Schema is missing required inputs",
   "dDYCuU": "Learn more",
   "dOpdsP": "Update",
   "dSTRb/": "Specify the behavior and capabilities for transferring content over HTTP. Large messages may be split up into smaller requests to the connector to allow large message upload. Details can be found at http://aka.ms/logicapps-chunk#upload-content-in-chunks",
