--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -164,6 +164,7 @@
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
   "6ueRYm": "Start time",
+  "6zjUTO": "{functionName} has too many inputs assigned to it",
   "73iM9+": "Update source schema",
   "7Fyq1F": "No inputs",
   "7GSk99": "OK",
@@ -801,6 +802,7 @@
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
   "_6ueRYm.comment": "Start time text",
+  "_6zjUTO.comment": "Body text for a too many inputs card",
   "_73iM9+.comment": "Header to update source schema",
   "_7Fyq1F.comment": "No inputs text",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
@@ -1471,6 +1473,7 @@
   "_lexzgJ.comment": "Message on failure to remove source node",
   "_lgs5sf.comment": "label text for stateless run mode",
   "_ljAOR6.comment": "Label for description of custom body Function",
+  "_lqziTm.comment": "Title for a too many inputs card",
   "_lsKVU6.comment": "Select an action type placeholder",
   "_lzBHHT.comment": "Error message for unknown property",
   "_lztiwS.comment": "Parameter Field Actual Value Title",
@@ -1917,6 +1920,7 @@
   "lexzgJ": "Remove all references to element ' {nodeName} ' before you remove the element.",
   "lgs5sf": "Stateless run mode:",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
+  "lqziTm": "Function has too many inputs assigned",
   "lsKVU6": "Select an action type",
   "lzBHHT": "Array Element {index} has unknown property {property}",
   "lztiwS": "Actual Value",
