Put the node values in single quotes

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -28,6 +28,7 @@
   "/rjP4U": "(UTC) Coordinated Universal Time",
   "/sMQhI": "(UTC-05:00) Indiana (East)",
   "/ut0u7": "Returns the first Count elements from the array or string passed in",
+  "/vWMKW": "Missing required inputs",
   "/yYyOq": "Resource Group",
   "00xlpa": "Shared",
   "02vyBk": "Trigger",
@@ -156,6 +157,7 @@
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
+  "6gZ4I3": "Function ''{functionName}'' has too many inputs assigned to it",
   "6jiO7t": "Show run",
   "6jsWn/": "Required. The collection to search within.",
   "6kSpHL": "Required. The name of the action with a multipart response.",
@@ -164,7 +166,6 @@
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
   "6ueRYm": "Start time",
-  "6zjUTO": "{functionName} has too many inputs assigned to it",
   "73iM9+": "Update source schema",
   "7Fyq1F": "No inputs",
   "7GSk99": "OK",
@@ -274,6 +275,7 @@
   "DyYcJZ": "Run After",
   "DysO/Q": "Ctrl + Y",
   "E+HsWF": "Signing in...",
+  "E3+TAA": "Schema node ''{nodeName}'' has an input with a mismatched type",
   "E9OS+9": "(UTC-09:00) Coordinated Universal Time-09",
   "ECZC6Y": "Converts the parameter to a decimal number",
   "ERAWZA": "Response",
@@ -552,6 +554,7 @@
   "UR1CS5": "Hide code",
   "USVffu": "Content not shown due to security configuration.",
   "UYRIS/": "{fileName} (file name)",
+  "Ufv5m9": "Schema node ''{nodeName}'' has an non-terminating connection chain",
   "UnrrzF": "Source schema",
   "Ur+wph": "Click to delete item",
   "UtyRCH": "Enter a name for the connection",
@@ -595,6 +598,7 @@
   "XN9RvJ": "(UTC-08:00) Baja California",
   "XOzn/3": "Connection name",
   "XQs+wW": "Insert a new step",
+  "XRK+gt": "Function ''{functionName}'' has an non-terminating connection chain",
   "XTYYks": "(UTC+09:00) Seoul",
   "XTuxmH": "{minutes} minutes {seconds} seconds",
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
@@ -623,7 +627,6 @@
   "YlesUQ": "Your map is in perfect condition",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
-  "Z657PF": "Function is missing required inputs",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
   "ZBJiuD": "Status",
   "ZCFMoe": "Body",
@@ -666,6 +669,7 @@
   "_/rjP4U.comment": "Timezone value ",
   "_/sMQhI.comment": "Timezone value ",
   "_/ut0u7.comment": "Label for description of custom take Function",
+  "_/vWMKW.comment": "Title for a function missing a required input card",
   "_/yYyOq.comment": "Header for resource group name",
   "_00xlpa.comment": "Filter by Shared category of connectors",
   "_02vyBk.comment": "Badge showing an action is a logic apps trigger",
@@ -794,6 +798,7 @@
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
+  "_6gZ4I3.comment": "Body text for a too many inputs card",
   "_6jiO7t.comment": "Menu item text for show run",
   "_6jsWn/.comment": "Required collection parameter to apply contains function on",
   "_6kSpHL.comment": "Required string parameter to identify action name for multipartBody function",
@@ -802,7 +807,6 @@
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
   "_6ueRYm.comment": "Start time text",
-  "_6zjUTO.comment": "Body text for a too many inputs card",
   "_73iM9+.comment": "Header to update source schema",
   "_7Fyq1F.comment": "No inputs text",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
@@ -912,6 +916,7 @@
   "_DyYcJZ.comment": "title for run after setting section",
   "_DysO/Q.comment": "Button text for the control-Y button combination to redo the last undone action",
   "_E+HsWF.comment": "Text for sign in button while loading.",
+  "_E3+TAA.comment": "Body text for the input type mismatch card",
   "_E9OS+9.comment": "Timezone value ",
   "_ECZC6Y.comment": "Label for description of custom decimal Function",
   "_ERAWZA.comment": "Header text for response",
@@ -1190,6 +1195,7 @@
   "_UR1CS5.comment": "Button to hide the code view",
   "_USVffu.comment": "Message text to inform the customer that the data is secure",
   "_UYRIS/.comment": "Title for file name parameter",
+  "_Ufv5m9.comment": "Body text for an unconnected required schema card",
   "_UnrrzF.comment": "Label to inform the below schema name is for source schema",
   "_Ur+wph.comment": "Label for delete button",
   "_UtyRCH.comment": "Placeholder text for connection name input",
@@ -1233,6 +1239,7 @@
   "_XN9RvJ.comment": "Timezone value ",
   "_XOzn/3.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
   "_XQs+wW.comment": "Tooltip for the button to add a new step (action or branch)",
+  "_XRK+gt.comment": "Body text for a function missing a required input card",
   "_XTYYks.comment": "Timezone value ",
   "_XTuxmH.comment": "This is a time duration in full non abbreviated format",
   "_XX1ioe.comment": "Timezone value ",
@@ -1261,7 +1268,6 @@
   "_YlesUQ.comment": "Message displayed when map checker has no errors or warnings",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
-  "_Z657PF.comment": "Title for a function missing a required input card",
   "_Z9PWl/.comment": "error message for invalid retry count",
   "_ZBJiuD.comment": "Status text",
   "_ZCFMoe.comment": "Display name for body outputs",
@@ -1283,7 +1289,6 @@
   "_aJxefp.comment": "Text for add new parameter button",
   "_aK4iLW.comment": "title for data handling setting section",
   "_aSnCCB.comment": "Header for resource lcoation",
-  "_aXyyDL.comment": "Body text for an unconnected required schema card",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1360,7 +1365,6 @@
   "_fBQBw/.comment": "Label for description of custom greaterOrEquals Function",
   "_fDisLL.comment": "Error while creating acl",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
-  "_fWsZhJ.comment": "Body text for a function missing a required input card",
   "_faSDuD.comment": "Timezone value ",
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
@@ -1439,7 +1443,6 @@
   "_jfInxm.comment": "Parameter Link Text",
   "_jgOaTX.comment": "Error Message on generating schema based on payload",
   "_jjYA4u.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition",
-  "_jlc/pM.comment": "Body text for the input type mismatch card",
   "_juR40n.comment": "label for request options input",
   "_juvF+0.comment": "Gateway dropdown label",
   "_k/oqFL.comment": "Required base64 string parameter to be converted using base64ToString function",
@@ -1473,7 +1476,6 @@
   "_lexzgJ.comment": "Message on failure to remove source node",
   "_lgs5sf.comment": "label text for stateless run mode",
   "_ljAOR6.comment": "Label for description of custom body Function",
-  "_lqziTm.comment": "Title for a too many inputs card",
   "_lsKVU6.comment": "Select an action type placeholder",
   "_lzBHHT.comment": "Error message for unknown property",
   "_lztiwS.comment": "Parameter Field Actual Value Title",
@@ -1561,6 +1563,7 @@
   "_qiIs4V.comment": "placeholder for retry interval setting",
   "_qnI4Y1.comment": "Required string parameter to be converted using int function",
   "_qq/bq0.comment": "Timezone value ",
+  "_qr1lLG.comment": "Body text for the input type mismatch card",
   "_qrxi0L.comment": "description of asynchronous response setting",
   "_r1FQhf.comment": "Timezone value ",
   "_r43nMc.comment": "Button text for undo the last action",
@@ -1597,6 +1600,7 @@
   "_syiNc+.comment": "Browse for file",
   "_sys5gu.comment": "Authentication type",
   "_t+XCkg.comment": "Required string parameter for destination time zone",
+  "_tAbbH8.comment": "Title for a too many inputs card",
   "_tAeKNh.comment": "Function display radio group option for simple",
   "_tE7Zam.comment": "Label for description of custom listCallbackUrl Function",
   "_tELkSC.comment": "Timezone value ",
@@ -1730,7 +1734,6 @@
   "aJxefp": "Add new parameters",
   "aK4iLW": "Data Handling",
   "aSnCCB": "Location",
-  "aXyyDL": "{nodeName} has an non-terminating connection chain",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1807,7 +1810,6 @@
   "fBQBw/": "Returns true if the first argument is greater than or equal to the second",
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
   "fGcSFd": "Paging count exceeds maximum value",
-  "fWsZhJ": "{functionName} has an non-terminating connection chain",
   "faSDuD": "(UTC+04:00) Port Louis",
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
@@ -1886,7 +1888,6 @@
   "jfInxm": "Edit in JSON",
   "jgOaTX": "Unable to generate schema",
   "jjYA4u": "Unsupported manifest connection reference format: '{referenceKeyFormat}'",
-  "jlc/pM": "{nodeName} has an input with a mismatched type",
   "juR40n": "Duration",
   "juvF+0": "Gateway",
   "k/oqFL": "Required. The base64 encoded string.",
@@ -1920,7 +1921,6 @@
   "lexzgJ": "Remove all references to element ' {nodeName} ' before you remove the element.",
   "lgs5sf": "Stateless run mode:",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
-  "lqziTm": "Function has too many inputs assigned",
   "lsKVU6": "Select an action type",
   "lzBHHT": "Array Element {index} has unknown property {property}",
   "lztiwS": "Actual Value",
@@ -2008,6 +2008,7 @@
   "qiIs4V": "Example: {example}",
   "qnI4Y1": "Required. The value that is converted to an integer.",
   "qq/bq0": "(UTC+09:00) Yakutsk",
+  "qr1lLG": "Function ''{nodeName}'' has an input with a mismatched type",
   "qrxi0L": "Asynchronous response allows a Logic App to respond with a 202 (Accepted) to indicate the request has been accepted for processing. A location header will be provided to retrieve the final state.",
   "r1FQhf": "(UTC+01:00) Windhoek",
   "r43nMc": "Undo",
@@ -2044,6 +2045,7 @@
   "syiNc+": "Browse",
   "sys5gu": "Client Certificate",
   "t+XCkg": "Required. A string that contains the time zone name of the destination time zone. See https://msdn.microsoft.com/en-us/library/gg154758.aspx for details.",
+  "tAbbH8": "Too many inputs assigned",
   "tAeKNh": "Simple",
   "tE7Zam": "Returns the URL to invoke the trigger or action",
   "tELkSC": "(UTC-06:00) Guadalajara, Mexico City, Monterrey",
