--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -52,6 +52,7 @@
   "0qV0Qe": "Required. The string that may contain the value.",
   "0qcKzG": "{parameterName} is no longer present in the operation schema. It should be removed before the workflow is re-saved.",
   "0uj1Li": "Returns a binary representation of an input data URI string",
+  "0upuCv": "Hour",
   "0y5eia": "More commands",
   "1+Z8n9": "Required. The data URI to convert to String representation.",
   "109OPL": "Returns the port from a URI. If port is not specified, returns the default port for the protocol",
@@ -93,6 +94,7 @@
   "2b1yD3": "(UTC+12:00) Auckland, Wellington",
   "2cVEMV": "Returns a single value matching the key name from form-data or form-encoded action output",
   "2gzGrJ": "Required. The name of the action with a form-data or form-encoded response.",
+  "2kWLLc": "Start Time",
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
   "2wJZkB": "Empty add dynamic content button",
@@ -148,6 +150,7 @@
   "5aa76N": "Returns the first element in the array or string passed in",
   "5b0sKi": "Returns true if an object, array, or string is empty",
   "5cPiWA": "Required. The name of the loop whose item you want.",
+  "5dCAjy": "Day",
   "5hWg4V": "Select element",
   "5qzZMo": "Loading...",
   "5rkegy": "Delete Parameter",
@@ -182,6 +185,7 @@
   "7yFLpB": "Copy URL",
   "7zzPsK": "Required. The string that may contain the value.",
   "8+0teU": "Parameter name already exists.",
+  "83G5rr": "Specify the interval.",
   "84D91Y": "Pfx",
   "89FJnl": "Invalid property '{0}' for authentication type '{1}'.",
   "8BoVtZ": "Error executing the api - {url}",
@@ -228,6 +232,7 @@
   "AX7dq3": "Input node type does not match the schema node's type",
   "AYaqW/": "(UTC+06:30) Yangon (Rangoon)",
   "AgrMqq": "Type of '{0}' is '{1}'.",
+  "AheXMN": "Select frequency.",
   "Amz9+m": "Enter audience",
   "AnX5yC": "Username",
   "ArTh0/": "Required. The string to encode into base64 representation.",
@@ -247,6 +252,7 @@
   "BQCPY7": "Required. The string to decode the URL-unsafe characters from.",
   "BQSRV0": "Enter password as plain text or use a secure parameter",
   "BSHFiw": "(UTC+08:00) Perth",
+  "BSgavq": "Example: Monday, Friday",
   "BVOUxP": "(UTC-05:00) Havana",
   "Bn8iTS": "State type:",
   "BoMvF2": "Collapse",
@@ -274,10 +280,12 @@
   "DyYcJZ": "Run After",
   "DysO/Q": "Ctrl + Y",
   "E+HsWF": "Signing in...",
+  "E+iim4": "Select timezone.",
   "E9OS+9": "(UTC-09:00) Coordinated Universal Time-09",
   "ECZC6Y": "Converts the parameter to a decimal number",
   "ERAWZA": "Response",
   "ERVorY": "Make Group",
+  "ESZXfC": "At these minutes",
   "EV9iRu": "Failed to save.",
   "EYqGxA": "(UTC+02:00) Athens, Bucharest",
   "EZz5q7": "Required. The index of where to start extracting the substring.",
@@ -322,6 +330,7 @@
   "GdGm4T": "More commands",
   "Gi72X5": "See Less",
   "Gi7czD": "Source schema element",
+  "Gl5khw": "At these hours",
   "Gmya+V": "Not available",
   "GreYWQ": "Enter parameter name.",
   "GtDOFg": "Cancel the selection",
@@ -329,9 +338,11 @@
   "GzQQqH": "Array",
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
+  "H2WdiZ": "Enter the valid minute values (from 0 to 59) separated by comma, e.g., 15,30",
   "H5VikC": "Invalid connection, mapping must not form a closed loop.",
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
   "HDqP2g": "Required. The key name of the form data value to return.",
+  "HH970i": "Month",
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
@@ -443,6 +454,7 @@
   "OGUVGd": "(UTC+11:00) Bougainville Island",
   "OH94j3": "Missing required property '{0}' for authentication type '{1}'",
   "OH9xlX": "10",
+  "OIOexo": "On these days",
   "OKszbi": "Connection Name",
   "OL5S5H": "Enter custom value",
   "OOUSLP": "This function doesn't require any input.",
@@ -559,6 +571,7 @@
   "V+/c21": "General",
   "V0ZbQO": "Show less",
   "V0le5X": "Enter a valid JSON.",
+  "V5f3ha": "Week",
   "VA7M1u": "In App",
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
@@ -585,6 +598,7 @@
   "WcnIF8": "Remove",
   "WgoP7R": "Returns the result from multiplying the two numbers",
   "WnU9v0": "A managed identity is not configured on the logic app.",
+  "X/7je+": "Minute",
   "X4gDhV": "Tenant",
   "X7X5ew": "Parameters",
   "X8JjjT": "{days} days {hours} hours",
@@ -598,6 +612,7 @@
   "XQs+wW": "Insert a new step",
   "XTYYks": "(UTC+09:00) Seoul",
   "XTuxmH": "{minutes} minutes {seconds} seconds",
+  "XVTQT6": "Interval",
   "XX1ioe": "(UTC+03:00) Kuwait, Riyadh",
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
   "XbtEq9": "Count",
@@ -691,6 +706,7 @@
   "_0qV0Qe.comment": "Required text parameter to apply indexOf function on",
   "_0qcKzG.comment": "Unknown Parameter error message",
   "_0uj1Li.comment": "Label for description of custom decodeDataUri Function",
+  "_0upuCv.comment": "Frequency value ",
   "_0y5eia.comment": "Label for commands in panel header",
   "_1+Z8n9.comment": "Required dataUri string parameter to be converted using dataUriToString function",
   "_109OPL.comment": "Label for description of custom uriPort Function",
@@ -732,6 +748,7 @@
   "_2b1yD3.comment": "Timezone value ",
   "_2cVEMV.comment": "Label for description of custom formDataValue Function",
   "_2gzGrJ.comment": "Required string parameter to identify action name for formDataValue function",
+  "_2kWLLc.comment": "Label for Start time",
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
   "_2wJZkB.comment": "Alt text for empty dynamic content icon",
@@ -787,6 +804,7 @@
   "_5aa76N.comment": "Label for description of custom first Function",
   "_5b0sKi.comment": "Label for description of custom empty Function",
   "_5cPiWA.comment": "Required string parameter to determine loop wanted",
+  "_5dCAjy.comment": "Frequency value ",
   "_5hWg4V.comment": "Select element",
   "_5qzZMo.comment": "A message shown at the bottom of a list when the next set of data is loading",
   "_5rkegy.comment": "Delete Button Tooltip Text",
@@ -821,6 +839,7 @@
   "_7yFLpB.comment": "ARIA label and tooltip text for the copy button",
   "_7zzPsK.comment": "Required text parameter to search endsWith function on",
   "_8+0teU.comment": "Error message when the workflow parameter name already exists.",
+  "_83G5rr.comment": "Placeholder for Interval",
   "_84D91Y.comment": "OAuth Pfx Label Display Name",
   "_89FJnl.comment": "Error message when having an invalid authentication property",
   "_8BoVtZ.comment": "Error message to show on dynamic call failure",
@@ -867,6 +886,7 @@
   "_AX7dq3.comment": "Error message for when input node type does not match schema node type",
   "_AYaqW/.comment": "Timezone value ",
   "_AgrMqq.comment": "Error message when having invalid authentication property types",
+  "_AheXMN.comment": "Placeholder for Frequency",
   "_Amz9+m.comment": "MSI Audience Placeholder Text",
   "_AnX5yC.comment": "Username Label Display Name",
   "_ArTh0/.comment": "Required base64 string parameter to be converted using base64 function",
@@ -886,6 +906,7 @@
   "_BQCPY7.comment": "Required string parameter to be decoded using decodeUriComponent function",
   "_BQSRV0.comment": "Basic Password Placeholder Text",
   "_BSHFiw.comment": "Timezone value ",
+  "_BSgavq.comment": "Placeholder for schedule days",
   "_BVOUxP.comment": "Timezone value ",
   "_Bn8iTS.comment": "Label text for workflow state type (Stateless or Stateful)",
   "_BoMvF2.comment": "Label for collapsing group",
@@ -913,10 +934,12 @@
   "_DyYcJZ.comment": "title for run after setting section",
   "_DysO/Q.comment": "Button text for the control-Y button combination to redo the last undone action",
   "_E+HsWF.comment": "Text for sign in button while loading.",
+  "_E+iim4.comment": "Placeholder for timezone",
   "_E9OS+9.comment": "Timezone value ",
   "_ECZC6Y.comment": "Label for description of custom decimal Function",
   "_ERAWZA.comment": "Header text for response",
   "_ERVorY.comment": "Make group button",
+  "_ESZXfC.comment": "Label for schedule minutes",
   "_EV9iRu.comment": "Message on failed save",
   "_EYqGxA.comment": "Timezone value ",
   "_EZz5q7.comment": "Required start index parameter to obtain substring",
@@ -961,6 +984,7 @@
   "_GdGm4T.comment": "Label for commands in row",
   "_Gi72X5.comment": "Click to view less token options",
   "_Gi7czD.comment": "Label for source schema node",
+  "_Gl5khw.comment": "Label for schedule hours",
   "_Gmya+V.comment": "Display text for when About content is not available",
   "_GreYWQ.comment": "Parameter Field Name Description",
   "_GtDOFg.comment": "Aria label description for cancel button",
@@ -968,9 +992,11 @@
   "_GzQQqH.comment": "This is an option in a dropdown where users can select type Array for their parameter.",
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
+  "_H2WdiZ.comment": "Placeholder for schedule minutes",
   "_H5VikC.comment": "Error message for circular logic connection validation",
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
+  "_HH970i.comment": "Frequency value ",
   "_HJIZrG.comment": "Diagnostics information on error message",
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
@@ -1082,6 +1108,7 @@
   "_OGUVGd.comment": "Timezone value ",
   "_OH94j3.comment": "Error message when missing a required authentication property",
   "_OH9xlX.comment": "Hour of the day",
+  "_OIOexo.comment": "Label for schedule days",
   "_OKszbi.comment": "Connection Name",
   "_OL5S5H.comment": "Label for dropdown option to enter custom value",
   "_OOUSLP.comment": "Function doesn't have or require inputs",
@@ -1198,6 +1225,7 @@
   "_V+/c21.comment": "title for general setting section",
   "_V0ZbQO.comment": "Toggle button text for hiding advanced parameters",
   "_V0le5X.comment": "Invalid JSON",
+  "_V5f3ha.comment": "Frequency value ",
   "_VA7M1u.comment": "\"In App\" category name",
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
@@ -1224,6 +1252,7 @@
   "_WcnIF8.comment": "Remove card from canvas",
   "_WgoP7R.comment": "Label for description of custom mul Function",
   "_WnU9v0.comment": "Error message when no identity is associated",
+  "_X/7je+.comment": "Frequency value ",
   "_X4gDhV.comment": "Tenant Label Display Name",
   "_X7X5ew.comment": "Workflow Parameters Title",
   "_X8JjjT.comment": "This is a time duration in full non abbreviated format",
@@ -1237,6 +1266,7 @@
   "_XQs+wW.comment": "Tooltip for the button to add a new step (action or branch)",
   "_XTYYks.comment": "Timezone value ",
   "_XTuxmH.comment": "This is a time duration in full non abbreviated format",
+  "_XVTQT6.comment": "Label for Interval",
   "_XX1ioe.comment": "Timezone value ",
   "_XaS4ds.comment": "Timezone value ",
   "_XbtEq9.comment": "title for retry count setting",
@@ -1285,6 +1315,7 @@
   "_aJxefp.comment": "Text for add new parameter button",
   "_aK4iLW.comment": "title for data handling setting section",
   "_aSnCCB.comment": "Header for resource lcoation",
+  "_aV/nLS.comment": "Frequency value ",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1329,6 +1360,7 @@
   "_d4xMIx.comment": "Timezone value ",
   "_dDYCuU.comment": "Link text to open URL",
   "_dOpdsP.comment": "Update Expression",
+  "_dQmi91.comment": "Label for Frequency",
   "_dSTRb/.comment": "description of content transfer setting",
   "_dUZi34.comment": "Timezone value ",
   "_dWFyfN.comment": "description of the secure inputs setting",
@@ -1381,6 +1413,7 @@
   "_gKq3Jv.comment": "Label of a button to go to the previous failed page option",
   "_gMhc5o.comment": "Required string parameter required to combine strings",
   "_gQt/0f.comment": "Label for conversion functions",
+  "_gTXyUo.comment": "Label for timezone",
   "_gWRF8m.comment": "title for trigger conditions setting",
   "_gabXSS.comment": "Text to show the current search term",
   "_gg0j4S.comment": "Timezone value ",
@@ -1416,6 +1449,7 @@
   "_iU1OJh.comment": "An accessible label for expand toggle icon",
   "_iU5Fdh.comment": "Label for URI manipulation functions",
   "_iUs7pv.comment": "Cancel message appearing on a confirmation dialog.",
+  "_iVMVAt.comment": "Placeholder for schedule hours",
   "_idQjOP.comment": "Label for properties tab",
   "_iq+tiv.comment": "Hour of the day",
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
@@ -1604,6 +1638,7 @@
   "_tNoZx2.comment": "Parameter Field Type Title",
   "_tP+5fA.comment": "Timezone value ",
   "_tRgTTN.comment": "Expand/collapse target schema",
+  "_tUYXRA.comment": "Placeholder for Start time",
   "_tUlRzr.comment": "Authentication type",
   "_tZj2Xn.comment": "Label for description of custom greater Function",
   "_taPCmY.comment": "Required integer parameter to subtract hours from time",
@@ -1725,6 +1760,7 @@
   "aJxefp": "Add new parameters",
   "aK4iLW": "Data Handling",
   "aSnCCB": "Location",
+  "aV/nLS": "Second",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1769,6 +1805,7 @@
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dDYCuU": "Learn more",
   "dOpdsP": "Update",
+  "dQmi91": "Frequency",
   "dSTRb/": "Specify the behavior and capabilities for transferring content over HTTP. Large messages may be split up into smaller requests to the connector to allow large message upload. Details can be found at http://aka.ms/logicapps-chunk#upload-content-in-chunks",
   "dUZi34": "(UTC+12:45) Chatham Islands",
   "dWFyfN": "Secure inputs of the operation.",
@@ -1821,6 +1858,7 @@
   "gKq3Jv": "Previous failed",
   "gMhc5o": "Required. The string to combine into a single string.",
   "gQt/0f": "Conversion functions",
+  "gTXyUo": "Time Zone",
   "gWRF8m": "Trigger Conditions",
   "gabXSS": "Search results for: {searchTerm}",
   "gg0j4S": "(UTC-06:00) Saskatchewan",
@@ -1856,6 +1894,7 @@
   "iU1OJh": "Expand",
   "iU5Fdh": "Manipulation functions",
   "iUs7pv": "Cancel",
+  "iVMVAt": "Example: 0, 10",
   "idQjOP": "Properties",
   "iq+tiv": "11",
   "iql+jn": "{seconds}s",
@@ -2044,6 +2083,7 @@
   "tNoZx2": "Type",
   "tP+5fA": "(UTC+06:00) Novosibirsk",
   "tRgTTN": "Expand/collapse target schema",
+  "tUYXRA": "Example: 2017-03-24T15:00:00Z",
   "tUlRzr": "Basic",
   "tZj2Xn": "Returns true if the first argument is greater than the second",
   "taPCmY": "Required. The number of hours to add. Can be negative to subtract hours.",
