--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1586,6 +1586,7 @@
   "_s7nGyC.comment": "Delete Button",
   "_sDkAVZ.comment": "Label for description of custom triggerFormDataMultiValues Function",
   "_sFwHQc.comment": "aria label description for cancel button",
+  "_sQ2vRs.comment": "add a case to switch statement",
   "_sW47JR.comment": "label for slider indicating the degree of parallelism",
   "_sZ0G/Z.comment": "Required string parameter to represent the unit of time",
   "_sbPZ9S.comment": "Required collection parameter to check empty function on",
@@ -2031,6 +2032,7 @@
   "s7nGyC": "Delete",
   "sDkAVZ": "Returns an array of values matching the key name from form-data or form-encoded trigger output",
   "sFwHQc": "Cancel creating a connection",
+  "sQ2vRs": "Add Case",
   "sW47JR": "Degree of Parallelism",
   "sZ0G/Z": "Required. A string containing the unit of time specified in the interval to add.",
   "sbPZ9S": "Required. The collection to check if it is empty.",
