--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -41,6 +41,7 @@
   "0JTHTZ": "Show run menu",
   "0KMjv6": "Tracking",
   "0R2D5l": "Returns a binary representation of a URI encoded string",
+  "0SSwxD": "Close panel",
   "0Vzp0l": "Collapse",
   "0ZlNtf": "Succeeded with retries",
   "0hxr5j": "(UTC-05:00) Chetumal",
@@ -676,6 +677,7 @@
   "_0JTHTZ.comment": "Button text to show run menu",
   "_0KMjv6.comment": "title for tracking component",
   "_0R2D5l.comment": "Label for description of custom uriComponentToBinary Function",
+  "_0SSwxD.comment": "Label on button that closes floating panel",
   "_0Vzp0l.comment": "Collapse, making the node smaller, hiding the contents",
   "_0ZlNtf.comment": "This is a status message to be shown in a monitoring view. This refers to the succeeded status of a previous action.",
   "_0hxr5j.comment": "Timezone value ",
