Update inputs and outputs to usequery

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -411,6 +411,7 @@
   "LoGUT3": "When used inside for-each loop, this function returns the current item of the specified loop.",
   "LpPNAD": "Add",
   "Lub7NN": "Required. The expressions that may be true.",
+  "LvLksz": "Loading outputs",
   "LvpxiA": "Gateway",
   "Lwe7tQ": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
   "M0HMjE": "Add a comment",
@@ -1067,6 +1068,7 @@
   "_LoGUT3.comment": "Label for description of custom item Function",
   "_LpPNAD.comment": "label to add a condition",
   "_Lub7NN.comment": "Required expression parameters to apply or function",
+  "_LvLksz.comment": "Loading outputs text",
   "_LvpxiA.comment": "Column header for connection gateway",
   "_Lwe7tQ.comment": "Timezone value ",
   "_M0HMjE.comment": "Text to tell users to click to add comments",
@@ -1731,6 +1733,7 @@
   "_xZhieP.comment": "Timezone value ",
   "_xb/DIr.comment": "Timezone value ",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
+  "_xwD1VZ.comment": "Loading inputs text",
   "_xwEX2/.comment": "Header text for key-value pair values",
   "_y1e9yw.comment": "Text for sign in button.",
   "_y3AZQB.comment": "Required object parameters to apply equals function",
@@ -2182,6 +2185,7 @@
   "xZhieP": "(UTC+05:00) Islamabad, Karachi",
   "xb/DIr": "(UTC+12:00) Coordinated Universal Time+12",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
+  "xwD1VZ": "Loading inputs",
   "xwEX2/": "Value",
   "y1e9yw": "Sign in",
   "y3AZQB": "Required. The object to compare equality.",
