entrypoint for new token picker

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -11,6 +11,7 @@
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
   "//nQG4": "Select an api from apim instance",
+  "/2+p0Z": "Insert data from previous step",
   "/AtN16": "(UTC+09:30) Darwin",
   "/B2CTz": "(UTC+08:00) Beijing, Chongqing, Hong Kong, Urumqi",
   "/I/U8L": "Body",
@@ -97,7 +98,6 @@
   "2kWLLc": "Start Time",
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
-  "2wJZkB": "Empty add dynamic content button",
   "2xhbE1": "(UTC+11:00) Magadan",
   "33+WHG": "Identifier",
   "36RiST": "System-assigned managed identity",
@@ -348,6 +348,7 @@
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
+  "Hbqlzk": "Insert Expression",
   "HfrUId": "Please select a card to see the content",
   "HmcHoE": "Error fetching manifest",
   "HoQiVa": "Enter a valid datetime.",
@@ -667,6 +668,7 @@
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
   "_//nQG4.comment": "Label for api selection",
+  "_/2+p0Z.comment": "Label for button to open dynamic content token picker",
   "_/AtN16.comment": "Timezone value ",
   "_/B2CTz.comment": "Timezone value ",
   "_/I/U8L.comment": "Label text for request or response body",
@@ -753,7 +755,6 @@
   "_2kWLLc.comment": "Label for Start time",
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
-  "_2wJZkB.comment": "Alt text for empty dynamic content icon",
   "_2xhbE1.comment": "Timezone value ",
   "_33+WHG.comment": "Column header text for identifier",
   "_36RiST.comment": "System-assigned managed identity dropdown option text",
@@ -1004,6 +1005,7 @@
   "_HJIZrG.comment": "Diagnostics information on error message",
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
+  "_Hbqlzk.comment": "Label for button to open expression token picker",
   "_HfrUId.comment": "Empty Panel Content Message",
   "_HmcHoE.comment": "Error message when manifest fails to load",
   "_HoQiVa.comment": "Error validation message",
@@ -1394,6 +1396,7 @@
   "_exo9v7.comment": "Exception for unsupported programming language",
   "_f/lWTW.comment": "Required object parameters to check for null in coalesce function",
   "_f1j0to.comment": "Optional end index parameter to obtain substring",
+  "_f81ClO.comment": "Alt text for empty dynamic content icon",
   "_fBQBw/.comment": "Label for description of custom greaterOrEquals Function",
   "_fDisLL.comment": "Error while creating acl",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
@@ -1845,6 +1848,7 @@
   "exo9v7": "Unsupported programming language.",
   "f/lWTW": "Required. The objects to check for null.",
   "f1j0to": "Optional. The index of where to stop extracting the substring.",
+  "f81ClO": "Empty dynamic content icon",
   "fBQBw/": "Returns true if the first argument is greater than or equal to the second",
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
   "fGcSFd": "Paging count exceeds maximum value",
