Implement loading and error scenarios in fetching inputs/outputs

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -539,6 +539,7 @@
   "T8Xqt9": "Failed",
   "TEN+cR": "Give feedback",
   "TI44R1": "Returns a string with each item of an array joined by a delimiter",
+  "TLHUMf": "Error loading inputs",
   "TNEttQ": "Friday",
   "TNzcrv": "(UTC+10:00) Vladivostok",
   "TO7qos": "Returns the start of the month of a string timestamp",
@@ -1196,6 +1197,7 @@
   "_T8Xqt9.comment": "This is a status message to be shown in a monitoring view",
   "_TEN+cR.comment": "Button text for submitting feedback",
   "_TI44R1.comment": "Label for description of custom join Function",
+  "_TLHUMf.comment": "Error loading inputs text",
   "_TNEttQ.comment": "Day of the week",
   "_TNzcrv.comment": "Timezone value ",
   "_TO7qos.comment": "Label for description of custom startOfMonth Function",
@@ -1576,6 +1578,7 @@
   "_pUeUDw.comment": "Timezone value ",
   "_pXmFGf.comment": "Label for description of custom xml Function",
   "_pYtSyE.comment": "Required number parameter to divide the dividend by in mod function",
+  "_pcGqoB.comment": "Error loading outputs text",
   "_pcuZKB.comment": "Label for signatures of custom intersection Function",
   "_piaRy6.comment": "Filter by Triggers category of connectors",
   "_pozypE.comment": "Label for description of custom trim Function",
@@ -2028,6 +2031,7 @@
   "pUeUDw": "(UTC+09:00) Osaka, Sapporo, Tokyo",
   "pXmFGf": "Covert the input to an Xml type value",
   "pYtSyE": "Required. The number to divide the Dividend by. After the division, the remainder is taken.",
+  "pcGqoB": "Error loading outputs",
   "pcuZKB": "Returns a single array or object that has common elements between arrays or objects passed in. The parameters for the function can either be a set of objects or a set of arrays (not a mixture of both). If there are two objects with the same name, the last object with that name appears in the final object.",
   "piaRy6": "Triggers",
   "pozypE": "Trims leading and trailing whitespace from a string",
