[VSFeat] Monitoring implementation (#1698)
* Add openMonitorig view for local

* Add extend from DesignerBase and initialization from react projecct

* Add monitoring view for remote apps

* Move run service to services libs

* Add run service to service list

* Add parse inputs and outputs

* Update get action links functions

* Change fetch for httpclient calls

* Add mock data for inputs and outputs

* Update parse response from inputs and outputs

* Update all fetch to httpclient

* Add host and run service to designer services helper

* Get run instance from run service

* Update fetch and display content from host service

* Add monitoring view designer command bar items

* Add logic to store run instance in state

* Update function to get runInstance data

* Update get content for inputs and outputs

* Add support for remote workflows

* Update inputs and outputs to usequery

* Implement loading and error scenarios in fetching inputs/outputs

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -411,6 +411,7 @@
   "LoGUT3": "When used inside for-each loop, this function returns the current item of the specified loop.",
   "LpPNAD": "Add",
   "Lub7NN": "Required. The expressions that may be true.",
+  "LvLksz": "Loading outputs",
   "LvpxiA": "Gateway",
   "Lwe7tQ": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
   "M0HMjE": "Add a comment",
@@ -538,6 +539,7 @@
   "T8Xqt9": "Failed",
   "TEN+cR": "Give feedback",
   "TI44R1": "Returns a string with each item of an array joined by a delimiter",
+  "TLHUMf": "Error loading inputs",
   "TNEttQ": "Friday",
   "TNzcrv": "(UTC+10:00) Vladivostok",
   "TO7qos": "Returns the start of the month of a string timestamp",
@@ -1067,6 +1069,7 @@
   "_LoGUT3.comment": "Label for description of custom item Function",
   "_LpPNAD.comment": "label to add a condition",
   "_Lub7NN.comment": "Required expression parameters to apply or function",
+  "_LvLksz.comment": "Loading outputs text",
   "_LvpxiA.comment": "Column header for connection gateway",
   "_Lwe7tQ.comment": "Timezone value ",
   "_M0HMjE.comment": "Text to tell users to click to add comments",
@@ -1194,6 +1197,7 @@
   "_T8Xqt9.comment": "This is a status message to be shown in a monitoring view",
   "_TEN+cR.comment": "Button text for submitting feedback",
   "_TI44R1.comment": "Label for description of custom join Function",
+  "_TLHUMf.comment": "Error loading inputs text",
   "_TNEttQ.comment": "Day of the week",
   "_TNzcrv.comment": "Timezone value ",
   "_TO7qos.comment": "Label for description of custom startOfMonth Function",
@@ -1574,6 +1578,7 @@
   "_pUeUDw.comment": "Timezone value ",
   "_pXmFGf.comment": "Label for description of custom xml Function",
   "_pYtSyE.comment": "Required number parameter to divide the dividend by in mod function",
+  "_pcGqoB.comment": "Error loading outputs text",
   "_pcuZKB.comment": "Label for signatures of custom intersection Function",
   "_piaRy6.comment": "Filter by Triggers category of connectors",
   "_pozypE.comment": "Label for description of custom trim Function",
@@ -1731,6 +1736,7 @@
   "_xZhieP.comment": "Timezone value ",
   "_xb/DIr.comment": "Timezone value ",
   "_xt5TeT.comment": "Description for Workflow Parameters Part 1",
+  "_xwD1VZ.comment": "Loading inputs text",
   "_xwEX2/.comment": "Header text for key-value pair values",
   "_y1e9yw.comment": "Text for sign in button.",
   "_y3AZQB.comment": "Required object parameters to apply equals function",
@@ -2025,6 +2031,7 @@
   "pUeUDw": "(UTC+09:00) Osaka, Sapporo, Tokyo",
   "pXmFGf": "Covert the input to an Xml type value",
   "pYtSyE": "Required. The number to divide the Dividend by. After the division, the remainder is taken.",
+  "pcGqoB": "Error loading outputs",
   "pcuZKB": "Returns a single array or object that has common elements between arrays or objects passed in. The parameters for the function can either be a set of objects or a set of arrays (not a mixture of both). If there are two objects with the same name, the last object with that name appears in the final object.",
   "piaRy6": "Triggers",
   "pozypE": "Trims leading and trailing whitespace from a string",
@@ -2182,6 +2189,7 @@
   "xZhieP": "(UTC+05:00) Islamabad, Karachi",
   "xb/DIr": "(UTC+12:00) Coordinated Universal Time+12",
   "xt5TeT": "Parameters are shared across workflows in a Logic App.",
+  "xwD1VZ": "Loading inputs",
   "xwEX2/": "Value",
   "y1e9yw": "Sign in",
   "y3AZQB": "Required. The object to compare equality.",
