--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -42,6 +42,7 @@
   "0JTHTZ": "Show run menu",
   "0KMjv6": "Tracking",
   "0R2D5l": "Returns a binary representation of a URI encoded string",
+  "0SSwxD": "Close panel",
   "0Vzp0l": "Collapse",
   "0ZlNtf": "Succeeded with retries",
   "0hxr5j": "(UTC-05:00) Chetumal",
@@ -254,6 +255,7 @@
   "BQSRV0": "Enter password as plain text or use a secure parameter",
   "BSHFiw": "(UTC+08:00) Perth",
   "BSgavq": "Example: Monday, Friday",
+  "BUutcC": "Expant list of sibling elements",
   "BVOUxP": "(UTC-05:00) Havana",
   "Bn8iTS": "State type:",
   "BoMvF2": "Collapse",
@@ -700,6 +702,7 @@
   "_0JTHTZ.comment": "Button text to show run menu",
   "_0KMjv6.comment": "title for tracking component",
   "_0R2D5l.comment": "Label for description of custom uriComponentToBinary Function",
+  "_0SSwxD.comment": "Label on button that closes floating panel",
   "_0Vzp0l.comment": "Collapse, making the node smaller, hiding the contents",
   "_0ZlNtf.comment": "This is a status message to be shown in a monitoring view. This refers to the succeeded status of a previous action.",
   "_0hxr5j.comment": "Timezone value ",
@@ -912,6 +915,7 @@
   "_BQSRV0.comment": "Basic Password Placeholder Text",
   "_BSHFiw.comment": "Timezone value ",
   "_BSgavq.comment": "Placeholder for schedule days",
+  "_BUutcC.comment": "Button that toggles list of elements to view",
   "_BVOUxP.comment": "Timezone value ",
   "_Bn8iTS.comment": "Label text for workflow state type (Stateless or Stateful)",
   "_BoMvF2.comment": "Label for collapsing group",
@@ -1696,6 +1700,7 @@
   "_vlDynP.comment": "Discard",
   "_vr70Gn.comment": "Create a connection for selected connector",
   "_vrYqUF.comment": "Label for button to allow user to create custom value in combobox",
+  "_vvSHR8.comment": "Change context of the canvas to view that element's children",
   "_vwH/XV.comment": "Create Parameter Text",
   "_vz2gZC.comment": "Header text for workflow properties",
   "_w0pI5M.comment": "Text to show when there are no browse results with the given filters",
@@ -2149,6 +2154,7 @@
   "vlDynP": "Discard",
   "vr70Gn": "Create a connection for {connectorName}.",
   "vrYqUF": "Enter custom value",
+  "vvSHR8": "Navigate to element and view children",
   "vwH/XV": "Create parameter",
   "vz2gZC": "Workflow Properties",
   "w0pI5M": "No results found for the specified filters",
