token picker work

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -217,6 +217,7 @@
   "9JuvQ4": "Returns a data URI of a value",
   "9Jv3+1": "Returns an object with an additional property value pair",
   "9SuA/E": "12",
+  "9atGYe": "Add",
   "9djnqI": "Returns the result from adding the two numbers",
   "9pdXmX": "(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna",
   "9pl7QP": "(UTC-04:00) Atlantic Time (Canada)",
@@ -503,6 +504,7 @@
   "QdJUaS": "Pencil icon",
   "QeE0k/": "Required. The value that is converted to binary.",
   "QePi+D": "Data type",
+  "QiVbKW": "Exit Full Screen",
   "QknZQ1": "Loading...",
   "Qn8qxn": "Returns a string in date format",
   "QpRRt3": "Required. The string to delimit items with.",
@@ -653,6 +655,7 @@
   "ZaIeDG": "Required. The value the string may start with.",
   "ZbCS4a": "Read more",
   "ZbX8xq": "This operation has already been deleted.",
+  "Zg3IjD": "Close",
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
@@ -874,6 +877,7 @@
   "_9JuvQ4.comment": "Label for description of custom dataUri Function",
   "_9Jv3+1.comment": "Label for description of custom addProperty Function",
   "_9SuA/E.comment": "Hour of the day",
+  "_9atGYe.comment": "Insert Expression",
   "_9djnqI.comment": "Label for description of custom add Function",
   "_9pdXmX.comment": "Timezone value ",
   "_9pl7QP.comment": "Timezone value ",
@@ -1160,6 +1164,7 @@
   "_QdJUaS.comment": "Pencil icon aria label",
   "_QeE0k/.comment": "Required string parameter to be converted using binary function",
   "_QePi+D.comment": "Data type of current node",
+  "_QiVbKW.comment": "Exit Full Screen token picker",
   "_QknZQ1.comment": "This is a message shown while loading. This is announced text that is said out loud with screen readers. Not shown in text.",
   "_Qn8qxn.comment": "Label for description of custom formatDateTime Function",
   "_QpRRt3.comment": "Required string parameter to separate objects and join function on",
@@ -1310,6 +1315,7 @@
   "_ZaIeDG.comment": "Required text parameter to search startsWith function with",
   "_ZbCS4a.comment": "Text for read more button",
   "_ZbX8xq.comment": "Text to tell users why delete is disabled",
+  "_Zg3IjD.comment": "Close token picker",
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
   "_Zr0yTE.comment": "Error message",
@@ -1322,6 +1328,7 @@
   "_aK4iLW.comment": "title for data handling setting section",
   "_aSnCCB.comment": "Header for resource lcoation",
   "_aV/nLS.comment": "Frequency value ",
+  "_ae7W0a.comment": "Full Screen token picker",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1404,6 +1411,7 @@
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
   "_fg/34o.comment": "Label for logical functions",
+  "_fmm7Ik.comment": "Token picker mode to insert expressions",
   "_froV/0.comment": "Timezone value ",
   "_ftwXvc.comment": "This is a status message to be shown in a monitoring view",
   "_g0a4Qe.comment": "Accessibility Label for the dictionary text value field",
@@ -1421,6 +1429,7 @@
   "_gKq3Jv.comment": "Label of a button to go to the previous failed page option",
   "_gMhc5o.comment": "Required string parameter required to combine strings",
   "_gQt/0f.comment": "Label for conversion functions",
+  "_gRUmiA.comment": "Info about token picker",
   "_gTXyUo.comment": "Label for timezone",
   "_gWRF8m.comment": "title for trigger conditions setting",
   "_gg0j4S.comment": "Timezone value ",
@@ -1615,7 +1624,6 @@
   "_rSIBjh.comment": "Parameter Field Value Placeholder Text",
   "_raBiud.comment": "Require parameters to find maximum using max function",
   "_rcz4w4.comment": "Label for description of custom uriComponent Function",
-  "_rjyBPU.comment": "Token picker mode to insert expressions",
   "_rsdJcV.comment": "Main message displayed in the placeholder",
   "_rstpaK.comment": "Timezone value ",
   "_rv0Pn+.comment": "Add new option",
@@ -1774,6 +1782,7 @@
   "aK4iLW": "Data Handling",
   "aSnCCB": "Location",
   "aV/nLS": "Second",
+  "ae7W0a": "Full Screen",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1856,6 +1865,7 @@
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
   "fg/34o": "Logical functions",
+  "fmm7Ik": "Function",
   "froV/0": "(UTC+04:30) Kabul",
   "ftwXvc": "Ignored",
   "g0a4Qe": "Value",
@@ -1873,6 +1883,7 @@
   "gKq3Jv": "Previous failed",
   "gMhc5o": "Required. The string to combine into a single string.",
   "gQt/0f": "Conversion functions",
+  "gRUmiA": "Info",
   "gTXyUo": "Time Zone",
   "gWRF8m": "Trigger Conditions",
   "gg0j4S": "(UTC-06:00) Saskatchewan",
@@ -2067,7 +2078,6 @@
   "rSIBjh": "Enter value for parameter.",
   "raBiud": "Required. Either an array of values to find the maximum value, or the first value of a set.",
   "rcz4w4": "Returns a URI encoded representation of a value",
-  "rjyBPU": "Expression",
   "rsdJcV": "Select source schema elements to build your map",
   "rstpaK": "(UTC-06:00) Central Time (US & Canada)",
   "rv0Pn+": "Add new",
