--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -431,6 +431,7 @@
   "MYgKHu": "Actions",
   "Mb+Eaq": "Bool",
   "Mb/Vp8": "Next failed",
+  "Mc6ITJ": "Search",
   "MfAdfx": "Edit in advanced mode",
   "Mgcs5s": "Enter a valid number.",
   "MirIsS": "Show code",
@@ -1091,6 +1092,7 @@
   "_MYgKHu.comment": "Heading for a tooltip explaining Actions",
   "_Mb+Eaq.comment": "This is an option in a dropdown where users can select type Boolean for their parameter.",
   "_Mb/Vp8.comment": "Button indicating to go to the next page with failed options",
+  "_Mc6ITJ.comment": "Placeholder text to search token picker",
   "_MfAdfx.comment": "Button Label when clicked to swith to advanced editor",
   "_Mgcs5s.comment": "Error validation message",
   "_MirIsS.comment": "Button to display the code view",
@@ -1540,7 +1542,6 @@
   "_mZRMD9.comment": "Required text parameter to lower case",
   "_mca3Ml.comment": "Aria label description for sign in button.",
   "_mjS/k1.comment": "description of suppress woers setting",
-  "_mmF/SW.comment": "Insert Expression",
   "_mvrlkP.comment": "OAuth Password Placeholder Text",
   "_mwEHSX.comment": "Label for function node",
   "_mx2IMJ.comment": "Hour of the day",
@@ -1673,7 +1674,6 @@
   "_uRurmg.comment": "Timezone value ",
   "_uUlBZ8.comment": "Label for description of custom addHours Function",
   "_uWf/I5.comment": "Button to open map checker",
-  "_uXJdAh.comment": "Placeholder text to search token picker",
   "_uZH8Qs.comment": "description of action timeout setting",
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
   "_uc3ytS.comment": "Select a runtime placeholder",
@@ -1994,7 +1994,6 @@
   "mZRMD9": "Required. The string to convert to lower casing. If a character in the string does not have a lowercase equivalent, the character is included unchanged in the returned string.",
   "mca3Ml": "Sign in to connector",
   "mjS/k1": "Limit Logic Apps to not include workflow metadata headers in the outgoing request.",
-  "mmF/SW": "OK",
   "mvrlkP": "Enter password as plain text or use a secure parameter",
   "mwEHSX": "Function",
   "mx2IMJ": "13",
@@ -2127,7 +2126,6 @@
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
   "uUlBZ8": "Adds an integer number of hours to a string timestamp passed in",
   "uWf/I5": "Show me",
-  "uXJdAh": "Search dynamic content",
   "uZH8Qs": "Limit the maximum duration between the retries and asynchronous responses for this action. Note: This does not alter the request timeout of a single request.",
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
   "uc3ytS": "Select a runtime",
