--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -11,6 +11,7 @@
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
   "//nQG4": "Select an api from apim instance",
+  "/2+p0Z": "Insert data from previous step",
   "/AtN16": "(UTC+09:30) Darwin",
   "/B2CTz": "(UTC+08:00) Beijing, Chongqing, Hong Kong, Urumqi",
   "/I/U8L": "Body",
@@ -98,7 +99,6 @@
   "2kWLLc": "Start Time",
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
-  "2wJZkB": "Empty add dynamic content button",
   "2xhbE1": "(UTC+11:00) Magadan",
   "33+WHG": "Identifier",
   "36RiST": "System-assigned managed identity",
@@ -218,6 +218,7 @@
   "9JuvQ4": "Returns a data URI of a value",
   "9Jv3+1": "Returns an object with an additional property value pair",
   "9SuA/E": "12",
+  "9atGYe": "Add",
   "9djnqI": "Returns the result from adding the two numbers",
   "9pdXmX": "(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna",
   "9pl7QP": "(UTC-04:00) Atlantic Time (Canada)",
@@ -350,6 +351,7 @@
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
+  "Hbqlzk": "Insert Expression",
   "HfrUId": "Please select a card to see the content",
   "HmcHoE": "Error fetching manifest",
   "HoQiVa": "Enter a valid datetime.",
@@ -432,6 +434,7 @@
   "MYgKHu": "Actions",
   "Mb+Eaq": "Bool",
   "Mb/Vp8": "Next failed",
+  "Mc6ITJ": "Search",
   "MfAdfx": "Edit in advanced mode",
   "Mgcs5s": "Enter a valid number.",
   "MirIsS": "Show code",
@@ -505,6 +508,7 @@
   "QdJUaS": "Pencil icon",
   "QeE0k/": "Required. The value that is converted to binary.",
   "QePi+D": "Data type",
+  "QiVbKW": "Exit Full Screen",
   "QknZQ1": "Loading...",
   "Qn8qxn": "Returns a string in date format",
   "QpRRt3": "Required. The string to delimit items with.",
@@ -656,6 +660,7 @@
   "ZaIeDG": "Required. The value the string may start with.",
   "ZbCS4a": "Read more",
   "ZbX8xq": "This operation has already been deleted.",
+  "Zg3IjD": "Close",
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
@@ -671,6 +676,7 @@
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
   "_//nQG4.comment": "Label for api selection",
+  "_/2+p0Z.comment": "Label for button to open dynamic content token picker",
   "_/AtN16.comment": "Timezone value ",
   "_/B2CTz.comment": "Timezone value ",
   "_/I/U8L.comment": "Label text for request or response body",
@@ -758,7 +764,6 @@
   "_2kWLLc.comment": "Label for Start time",
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
-  "_2wJZkB.comment": "Alt text for empty dynamic content icon",
   "_2xhbE1.comment": "Timezone value ",
   "_33+WHG.comment": "Column header text for identifier",
   "_36RiST.comment": "System-assigned managed identity dropdown option text",
@@ -878,6 +883,7 @@
   "_9JuvQ4.comment": "Label for description of custom dataUri Function",
   "_9Jv3+1.comment": "Label for description of custom addProperty Function",
   "_9SuA/E.comment": "Hour of the day",
+  "_9atGYe.comment": "Insert Expression",
   "_9djnqI.comment": "Label for description of custom add Function",
   "_9pdXmX.comment": "Timezone value ",
   "_9pl7QP.comment": "Timezone value ",
@@ -1010,6 +1016,7 @@
   "_HJIZrG.comment": "Diagnostics information on error message",
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
+  "_Hbqlzk.comment": "Label for button to open expression token picker",
   "_HfrUId.comment": "Empty Panel Content Message",
   "_HmcHoE.comment": "Error message when manifest fails to load",
   "_HoQiVa.comment": "Error validation message",
@@ -1092,6 +1099,7 @@
   "_MYgKHu.comment": "Heading for a tooltip explaining Actions",
   "_Mb+Eaq.comment": "This is an option in a dropdown where users can select type Boolean for their parameter.",
   "_Mb/Vp8.comment": "Button indicating to go to the next page with failed options",
+  "_Mc6ITJ.comment": "Placeholder text to search token picker",
   "_MfAdfx.comment": "Button Label when clicked to swith to advanced editor",
   "_Mgcs5s.comment": "Error validation message",
   "_MirIsS.comment": "Button to display the code view",
@@ -1165,6 +1173,7 @@
   "_QdJUaS.comment": "Pencil icon aria label",
   "_QeE0k/.comment": "Required string parameter to be converted using binary function",
   "_QePi+D.comment": "Data type of current node",
+  "_QiVbKW.comment": "Exit Full Screen token picker",
   "_QknZQ1.comment": "This is a message shown while loading. This is announced text that is said out loud with screen readers. Not shown in text.",
   "_Qn8qxn.comment": "Label for description of custom formatDateTime Function",
   "_QpRRt3.comment": "Required string parameter to separate objects and join function on",
@@ -1316,6 +1325,7 @@
   "_ZaIeDG.comment": "Required text parameter to search startsWith function with",
   "_ZbCS4a.comment": "Text for read more button",
   "_ZbX8xq.comment": "Text to tell users why delete is disabled",
+  "_Zg3IjD.comment": "Close token picker",
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
   "_Zr0yTE.comment": "Error message",
@@ -1328,6 +1338,7 @@
   "_aK4iLW.comment": "title for data handling setting section",
   "_aSnCCB.comment": "Header for resource lcoation",
   "_aV/nLS.comment": "Frequency value ",
+  "_ae7W0a.comment": "Full Screen token picker",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1402,6 +1413,7 @@
   "_exo9v7.comment": "Exception for unsupported programming language",
   "_f/lWTW.comment": "Required object parameters to check for null in coalesce function",
   "_f1j0to.comment": "Optional end index parameter to obtain substring",
+  "_f81ClO.comment": "Alt text for empty dynamic content icon",
   "_fBQBw/.comment": "Label for description of custom greaterOrEquals Function",
   "_fDisLL.comment": "Error while creating acl",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
@@ -1409,6 +1421,7 @@
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
   "_fg/34o.comment": "Label for logical functions",
+  "_fmm7Ik.comment": "Token picker mode to insert expressions",
   "_froV/0.comment": "Timezone value ",
   "_ftwXvc.comment": "This is a status message to be shown in a monitoring view",
   "_g0a4Qe.comment": "Accessibility Label for the dictionary text value field",
@@ -1426,6 +1439,7 @@
   "_gKq3Jv.comment": "Label of a button to go to the previous failed page option",
   "_gMhc5o.comment": "Required string parameter required to combine strings",
   "_gQt/0f.comment": "Label for conversion functions",
+  "_gRUmiA.comment": "Info about token picker",
   "_gTXyUo.comment": "Label for timezone",
   "_gWRF8m.comment": "title for trigger conditions setting",
   "_gg0j4S.comment": "Timezone value ",
@@ -1536,7 +1550,6 @@
   "_mZRMD9.comment": "Required text parameter to lower case",
   "_mca3Ml.comment": "Aria label description for sign in button.",
   "_mjS/k1.comment": "description of suppress woers setting",
-  "_mmF/SW.comment": "Insert Expression",
   "_mvrlkP.comment": "OAuth Password Placeholder Text",
   "_mwEHSX.comment": "Label for function node",
   "_mx2IMJ.comment": "Hour of the day",
@@ -1621,7 +1634,6 @@
   "_rSIBjh.comment": "Parameter Field Value Placeholder Text",
   "_raBiud.comment": "Require parameters to find maximum using max function",
   "_rcz4w4.comment": "Label for description of custom uriComponent Function",
-  "_rjyBPU.comment": "Token picker mode to insert expressions",
   "_rsdJcV.comment": "Main message displayed in the placeholder",
   "_rstpaK.comment": "Timezone value ",
   "_rv0Pn+.comment": "Add new option",
@@ -1671,7 +1683,6 @@
   "_uRurmg.comment": "Timezone value ",
   "_uUlBZ8.comment": "Label for description of custom addHours Function",
   "_uWf/I5.comment": "Button to open map checker",
-  "_uXJdAh.comment": "Placeholder text to search token picker",
   "_uZH8Qs.comment": "description of action timeout setting",
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
   "_uc3ytS.comment": "Select a runtime placeholder",
@@ -1782,6 +1793,7 @@
   "aK4iLW": "Data Handling",
   "aSnCCB": "Location",
   "aV/nLS": "Second",
+  "ae7W0a": "Full Screen",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1856,6 +1868,7 @@
   "exo9v7": "Unsupported programming language.",
   "f/lWTW": "Required. The objects to check for null.",
   "f1j0to": "Optional. The index of where to stop extracting the substring.",
+  "f81ClO": "Empty dynamic content icon",
   "fBQBw/": "Returns true if the first argument is greater than or equal to the second",
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
   "fGcSFd": "Paging count exceeds maximum value",
@@ -1863,6 +1876,7 @@
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
   "fg/34o": "Logical functions",
+  "fmm7Ik": "Function",
   "froV/0": "(UTC+04:30) Kabul",
   "ftwXvc": "Ignored",
   "g0a4Qe": "Value",
@@ -1880,6 +1894,7 @@
   "gKq3Jv": "Previous failed",
   "gMhc5o": "Required. The string to combine into a single string.",
   "gQt/0f": "Conversion functions",
+  "gRUmiA": "Info",
   "gTXyUo": "Time Zone",
   "gWRF8m": "Trigger Conditions",
   "gg0j4S": "(UTC-06:00) Saskatchewan",
@@ -1990,7 +2005,6 @@
   "mZRMD9": "Required. The string to convert to lower casing. If a character in the string does not have a lowercase equivalent, the character is included unchanged in the returned string.",
   "mca3Ml": "Sign in to connector",
   "mjS/k1": "Limit Logic Apps to not include workflow metadata headers in the outgoing request.",
-  "mmF/SW": "OK",
   "mvrlkP": "Enter password as plain text or use a secure parameter",
   "mwEHSX": "Function",
   "mx2IMJ": "13",
@@ -2075,7 +2089,6 @@
   "rSIBjh": "Enter value for parameter.",
   "raBiud": "Required. Either an array of values to find the maximum value, or the first value of a set.",
   "rcz4w4": "Returns a URI encoded representation of a value",
-  "rjyBPU": "Expression",
   "rsdJcV": "Select source schema elements to build your map",
   "rstpaK": "(UTC-06:00) Central Time (US & Canada)",
   "rv0Pn+": "Add new",
@@ -2125,7 +2138,6 @@
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
   "uUlBZ8": "Adds an integer number of hours to a string timestamp passed in",
   "uWf/I5": "Show me",
-  "uXJdAh": "Search dynamic content",
   "uZH8Qs": "Limit the maximum duration between the retries and asynchronous responses for this action. Note: This does not alter the request timeout of a single request.",
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
   "uc3ytS": "Select a runtime",
