--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -9,6 +9,7 @@
   "+g+mch": "Returns the body for a part in a multipart output of an action",
   "+iMTt7": "Check to select this connection",
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
+  "+x+Pq4": "NotSpecified",
   "+xiT4Q": "Pagination",
   "//nQG4": "Select an api from apim instance",
   "/2+p0Z": "Insert data from previous step",
@@ -648,7 +649,6 @@
   "YfwZJO": "Search Tips",
   "Yh5OVd": "Custom value does not match one of the allowed types for this input",
   "YlesUQ": "Your map is in perfect condition",
-  "YoQara": "None",
   "Yuu5CD": "Zoom out",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
   "ZBJiuD": "Status",
@@ -674,6 +674,7 @@
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
   "_+iMTt7.comment": "aria label description for check button",
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
+  "_+x+Pq4.comment": "Display text for when About Panel has no Tags",
   "_+xiT4Q.comment": "title for pagination setting",
   "_//nQG4.comment": "Label for api selection",
   "_/2+p0Z.comment": "Label for button to open dynamic content token picker",
@@ -1313,7 +1314,6 @@
   "_YfwZJO.comment": "Search tip header label",
   "_Yh5OVd.comment": "Error message for when custom value does not match one of the function node input's allowed types",
   "_YlesUQ.comment": "Message displayed when map checker has no errors or warnings",
-  "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
   "_Z9PWl/.comment": "error message for invalid retry count",
   "_ZBJiuD.comment": "Status text",
